--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container text-center">
-            &copy; 2021 - Task Master 2.0 brought to you by Danny! - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Task Master 2.0 brought to you by Danny Novoa! - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
